--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
   "name": "craftapplied-v4",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "Craft Applied public homepage",
   "main": "index.js",
-  "author": "Darren Barklie",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/darrenbarklie/craftapplied-v4.git"
   },
-  "author": "",
+  "author": "Darren Barklie",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/darrenbarklie/craftapplied-v4/issues"
   },
-  "homepage": "https://github.com/darrenbarklie/craftapplied-v4#readme"
+  "homepage": "https://github.com/darrenbarklie/craftapplied-v4#readme",
+  "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^3.5.5"
+  }
 }
