--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Craft Applied public homepage",
   "main": "index.js",
   "scripts": {
+    "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack"
   },
@@ -22,6 +23,8 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "webpack": "^3.5.5"
   }
 }
