--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   },
   "homepage": "https://github.com/darrenbarklie/craftapplied-v4#readme",
   "dependencies": {
+    "body-parser": "^1.18.0",
+    "cors": "^2.8.4",
     "express": "^4.15.4",
+    "mongodb": "^2.2.31",
+    "mongoose": "^4.11.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "webpack": "^3.5.5"
@@ -33,6 +37,7 @@
     "css-loader": "^0.28.7",
     "file-loader": "^0.11.2",
     "node-sass": "^4.5.3",
+    "nodemon": "^1.12.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack-dev-server": "^2.7.1"
