--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.10",
     "react": "^15.6.1",
+    "react-async-script": "^0.9.1",
     "react-dom": "^15.6.1",
+    "react-google-recaptcha": "^0.9.7",
     "webpack": "^3.5.5"
   },
   "devDependencies": {
