--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "express": "^4.15.4",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.10",
+    "q": "^1.5.0",
     "react": "^15.6.1",
     "react-async-script": "^0.9.1",
     "react-dom": "^15.6.1",
     "react-google-recaptcha": "^0.9.7",
+    "request": "^2.81.0",
     "webpack": "^3.5.5"
   },
   "devDependencies": {
