--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-async-script": "^0.9.1",
     "react-dom": "^15.6.1",
     "react-google-recaptcha": "^0.9.7",
+    "react-router-dom": "^4.2.2",
     "request": "^2.81.0",
     "webpack": "^3.5.5"
   },
