--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^15.6.1",
     "react-google-recaptcha": "^0.9.7",
     "react-router-dom": "^4.2.2",
+    "react-transition-group": "^2.2.0",
     "request": "^2.81.0",
     "webpack": "^3.5.5"
   },
